[gd_scene load_steps=4 format=3 uid="uid://c1dropped_item"]

[ext_resource type="Script" path="res://scripts/equipment/dropped_item.gd" id="1_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_glow"]
radius = 24.0

[node name="DroppedItem" type="Area2D"]
collision_layer = 16
collision_mask = 1
script = ExtResource("1_script")

[node name="Glow" type="Sprite2D" parent="."]
z_index = -1
modulate = Color(1, 1, 1, 0.6)
scale = Vector2(3, 3)

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="RarityLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -30.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pickup")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
